Some layout problems fixed

--- a/src/app/acerca-de/acerca-de.component.scss
+++ b/src/app/acerca-de/acerca-de.component.scss
@@ -1,5 +1,5 @@
 .acerca_de{
-    background-color: #d3d3d3;
+    background-color: #F5F6F7;
 }
 
 .foto{
