--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -18,4 +18,10 @@
     } 
 }
 
+@media screen and (min-width: 768px) {
+    .navbar{
+        height: 5rem;
+    }
+}
+
 
