--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -84,7 +84,16 @@
 
 }
 .text-card{
-    background-color: rgba(109, 175, 254, 1);
+    background-color: #e6e6fa;
+}
+
+.btn-portfolio{
+    margin: 2rem auto;
+    background: linear-gradient(90deg, rgba(109, 175, 254, 1) 0%, rgba(9,9,121,1) 100%);
+    width: 70%;
+    height: 3rem;
+    color:#A6CCED;
+    border: none;
 }
 
 @media screen and (min-width: 992px) {
